# wpgen

./: .gitignore  README.md  ai_generator.py  generate_all_mono.py  generate_examples.py  generate_kitchn_walls.py  generate_mega_combis.py  generator.py  install.sh  kitchn_bridge.py  pyproject.toml  requirements.txt  tui.py  tui_theme_config.py  wp-gen-tui.ing
functions/: wpgen.fish
wpgen/: generator.py  kitchn_bridge.py  tui.py  tui_theme_config.py
